--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Course Home Page for WDD 231 Web Frontend Development" />
+  <meta name="author" content="Zhili Zhong" />
+  <title>WDD 231 - Course Home Page</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="styles/small.css" />
+  <link rel="stylesheet" href="styles/larger.css" />
+
+  <!-- JavaScript -->
+  <script src="scripts/date.js" defer></script>
+  <script src="scripts/lastModified.js" defer></script>
+  <script src="scripts/navigation.js" defer></script>
+  <script src="scripts/course.js" defer></script>
+</head>
+<body>
+  <header>
+    <img src="images/profile.jpg" alt="Profile photo" width="60" height="60" />
+    <span>Your Name Here</span>
+  </header>
+
+  <nav>
+    <button id="menu-toggle">☰</button>
+    <ul id="nav-links">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Chamber</a></li>
+      <li><a href="#">Final</a></li>
+      <li><a href="https://github.com/leo060702">GitHub Profile</a></li>
+      <li><a href="https://linkedin.com/in/zhili-zhong-379021353">LinkedIn</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <h1>Home</h1>
+
+    <section>
+      <h2>About This Course</h2>
+      <p>This course covers frontend web development using modern tools and best practices.</p>
+    </section>
+
+    <section>
+      <h2>My Progress</h2>
+      <p>Below is a list of courses required in the Web & Computer Programming certificate.</p>
+      <div>
+        <button id="all-courses">All Courses</button>
+        <button id="wdd-courses">WDD Courses</button>
+        <button id="cse-courses">CSE Courses</button>
+      </div>
+      <div id="course-cards"></div>
+      <p>Total Credits: <span id="total-credits">0</span></p>
+    </section>
+
+    <section>
+      <h2>Resources</h2>
+      <ul>
+        <li><a href="https://byui.instructure.com/">Canvas</a></li>
+        <li><a href="https://github.com/">GitHub</a></li>
+        <li><a href="https://developer.mozilla.org/">MDN Web Docs</a></li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; <span id="Zhili Zhong"></span> | Zhili Zhong | 1951 Las Lomitas Dr, Hacienda Heights CA,91745</p>
+    <p id="lastModified"></p>
+  </footer>
+</body>
+</html>
