--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 </head>
 <body>
   <header>
-    <img src="images/profile.jpg" alt="Profile photo" width="60" height="60" />
-    <span>Your Name Here</span>
+    <img src="images/profile.jpg" alt="Profile photo" width="60" height="60" onerror="this.onerror=null; this.src='https://via.placeholder.com/60';" />
+    <span>Zhili Zhong</span>
   </header>
 
   <nav>
     <button id="menu-toggle">☰</button>
     <ul id="nav-links">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Chamber</a></li>
-      <li><a href="#">Final</a></li>
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="chamber/index.html">Chamber</a></li>
+      <li><a href="final/index.html">Final</a></li>
       <li><a href="https://github.com/leo060702">GitHub Profile</a></li>
       <li><a href="https://linkedin.com/in/zhili-zhong-379021353">LinkedIn</a></li>
     </ul>
@@ -40,21 +40,31 @@
   <main>
     <h1>Home</h1>
 
-    <section>
-      <h2>About This Course</h2>
-      <p>This course covers frontend web development using modern tools and best practices.</p>
+    <section class="flex-container">
+      <div class="card">
+        <h3>Course Work</h3>
+        <ul>
+          <li>WDD 130 - Web Fundamentals</li>
+          <li>WDD 131 - Dynamic Web</li>
+          <li>CSE 121b - JavaScript Language</li>
+        </ul>
+      </div>
+      <div class="card">
+        <h3>Hometown - Wuhan, China</h3>
+        <img src="images/hometown.jpg" alt="My hometown" onerror="this.onerror=null; this.src='https://via.placeholder.com/600x300?text=Hometown+Image';" />
+        <p style="text-align:center; font-size:0.9rem; color:#555">Wuhan Yangtze River Bridge River View</p>
+      </div>
     </section>
 
     <section>
-      <h2>My Progress</h2>
-      <p>Below is a list of courses required in the Web & Computer Programming certificate.</p>
-      <div>
-        <button id="all-courses">All Courses</button>
-        <button id="wdd-courses">WDD Courses</button>
-        <button id="cse-courses">CSE Courses</button>
+      <h2>Web and Computer Programming Certificate</h2>
+      <div style="text-align:center;">
+        <button id="all-courses">All</button>
+        <button id="cse-courses">CSE</button>
+        <button id="wdd-courses">WDD</button>
       </div>
       <div id="course-cards"></div>
-      <p>Total Credits: <span id="total-credits">0</span></p>
+      <p style="text-align:center;">Total Credits: <span id="total-credits">0</span></p>
     </section>
 
     <section>
@@ -68,7 +78,7 @@
   </main>
 
   <footer>
-    <p>&copy; <span id="Zhili Zhong"></span> | Zhili Zhong | 1951 Las Lomitas Dr, Hacienda Heights CA,91745</p>
+    <p>&copy; <span id="currentyear"></span> | Zhili Zhong | California, USA</p>
     <p id="lastModified"></p>
   </footer>
 </body>
