--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- JavaScript -->
   <script src="scripts/date.js" defer></script>
-  <script src="scripts/lastModified.js" defer></script>
+  <script src="scripts/lastmodified.js" defer></script>
   <script src="scripts/navigation.js" defer></script>
   <script src="scripts/course.js" defer></script>
 </head>
