--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,9 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Hacienda Heights Chamber of Commerce - Home Page" />
+  <meta name="description" content="The Hacienda Heights Chamber of Commerce supports local business growth, hosts events, and connects our diverse community in the San Gabriel Valley." />
   <meta name="author" content="Zhili Zhong" />
-  <title>Hacienda Heights Chamber</title>
+
+  <meta property="og:title" content="Hacienda Heights Chamber of Commerce" />
+  <meta property="og:description" content="Building a strong community through local business, events, and member support in Southern California." />
+  <meta property="og:image" content="images/hero.jpg" />
+  <meta property="og:url" content="https://leo060702.github.io/wdd231/chamber/index.html" />
+
+  <title>Hacienda Heights Chamber of Commerce - Home Page</title>
   <link rel="icon" href="images/favicon.ico" />
   <link rel="stylesheet" href="styles/directory.css" />
 </head>
