--- a/chamber/index.html
+++ b/chamber/index.html
@@ -38,7 +38,7 @@
       <div class="hero-text">
         <h2>Welcome to Hacienda Heights!</h2>
         <p>Supporting local business and building community together.</p>
-        <a href="#" class="cta-button">Join the Chamber</a>
+        <a href="join.html" class="cta-button">Join the Chamber</a>
       </div>
     </section>
 
