--- a/chamber/join.html
+++ b/chamber/join.html
@@ -14,6 +14,8 @@
 
   <title>Join | Hacienda Heights Chamber</title>
   <link rel="stylesheet" href="styles/directory.css" />
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
