--- a/chamber/join.html
+++ b/chamber/join.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Join the Hacienda Heights Chamber of Commerce" />
   <meta name="author" content="Zhili Zhong" />
 
-  <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Join the Hacienda Heights Chamber" />
   <meta property="og:description" content="Become part of the Hacienda Heights Chamber of Commerce. Network, grow your business, and engage in the local community." />
   <meta property="og:image" content="images/hero.jpg" />
@@ -14,18 +14,82 @@
 
   <title>Join | Hacienda Heights Chamber</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />	
   <link rel="stylesheet" href="styles/directory.css" />
+  <style>
+    /* Simple mobile nav */
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      background: #333;
+      display: none;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      padding: 1em;
+      display: block;
+    }
+
+    .active {
+      background-color: #555;
+    }
+
+    .menu-toggle {
+      display: block;
+      background: #333;
+      color: white;
+      padding: 10px;
+      text-align: center;
+      cursor: pointer;
+    }
+
+    form {
+      margin: 0 auto;
+      width: 90%;
+      max-width: 500px;
+    }
+
+    /* Modal */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      text-align: center;
+    }
+
+    .close {
+      float: right;
+      cursor: pointer;
+      font-size: 1.5em;
+    }
+  </style>
 </head>
 
 <body>
   <header>
     <span class="site-title">Hacienda Heights Chamber of Commerce</span>
+    <div class="menu-toggle">Menu</div>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="directory.html">Directory</a></li>
-        <li><a href="join.html">Join</a></li>
+        <li><a href="join.html" class="active">Join</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -45,18 +109,20 @@
       <form action="thankyou.html" method="get">
         <fieldset>
           <legend>Applicant Information</legend>
-          <label>First Name: <input type="text" name="fname" required /></label>
-          <label>Last Name: <input type="text" name="lname" required /></label>
-          <label>Title/Position: <input type="text" name="title" pattern="[a-zA-Z\-\s]{7,}" required /></label>
-          <label>Email: <input type="email" name="email" required placeholder="you@example.com" /></label>
-          <label>Phone: <input type="tel" name="phone" required /></label>
+          <label>First Name: <input type="text" name="fname" required autocomplete="given-name" /></label>
+          <label>Last Name: <input type="text" name="lname" required autocomplete="family-name" /></label>
+          <label>Title/Position: <input type="text" name="title" pattern="[a-zA-Z\-\s]{7,}" required autocomplete="organization-title" /></label>
+          <label>Email: <input type="email" name="email" required placeholder="you@example.com" autocomplete="email" /></label>
+          <label>Phone: <input type="tel" name="phone" required autocomplete="tel" /></label>
         </fieldset>
 
         <fieldset>
           <legend>Business Information</legend>
-          <label>Business/Organization Name: <input type="text" name="organization" required /></label>
+          <label>Business/Organization Name: <input type="text" name="organization" required autocomplete="organization" /></label>
 
-          <label>Membership Level:</label>
+          <label>Membership Level:
+            <button type="button" id="membershipInfo">More Info</button>
+          </label>
           <label><input type="radio" name="membership" value="NP" required /> 🕊️ NP Membership (Non-Profit)</label>
           <label><input type="radio" name="membership" value="Bronze" /> 🥉 Bronze Membership</label>
           <label><input type="radio" name="membership" value="Silver" /> 🥈 Silver Membership</label>
@@ -73,6 +139,19 @@
         </div>
       </form>
     </section>
+
+    <!-- Modal -->
+    <div id="modal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Membership Levels</h2>
+        <p>NP Membership: For non-profit organizations.</p>
+        <p>Bronze Membership: Basic business support and listing.</p>
+        <p>Silver Membership: Includes Bronze benefits + featured events.</p>
+        <p>Gold Membership: Includes all benefits + premium promotion.</p>
+      </div>
+    </div>
+
   </main>
 
   <footer>
@@ -80,6 +159,38 @@
     <p>Last Modified: <span id="lastModified"></span></p>
   </footer>
 
-<script src="scripts/join.js" type="module"></script>
+  <script>
+    // Year and Last Modified
+    document.getElementById("year").textContent = new Date().getFullYear();
+    document.getElementById("lastModified").textContent = document.lastModified;
+
+    // Mobile Menu Toggle
+    const menuToggle = document.querySelector('.menu-toggle');
+    const navUl = document.querySelector('nav ul');
+
+    menuToggle.addEventListener('click', () => {
+      navUl.style.display = (navUl.style.display === 'flex') ? 'none' : 'flex';
+    });
+
+    // Modal for Membership Info
+    const modal = document.getElementById("modal");
+    const btn = document.getElementById("membershipInfo");
+    const span = document.getElementsByClassName("close")[0];
+
+    btn.onclick = function () {
+      modal.style.display = "flex";
+    }
+
+    span.onclick = function () {
+      modal.style.display = "none";
+    }
+
+    window.onclick = function (event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+  </script>
 </body>
+
 </html>
