--- a/chamber/join.html
+++ b/chamber/join.html
@@ -15,77 +15,21 @@
   <title>Join | Hacienda Heights Chamber</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="styles/directory.css" />
-  <style>
-    /* Simple mobile nav */
-    nav ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-      background: #333;
-      display: none;
-    }
-
-    nav ul li a {
-      color: white;
-      text-decoration: none;
-      padding: 1em;
-      display: block;
-    }
-
-    .active {
-      background-color: #555;
-    }
-
-    .menu-toggle {
-      display: block;
-      background: #333;
-      color: white;
-      padding: 10px;
-      text-align: center;
-      cursor: pointer;
-    }
-
-    form {
-      margin: 0 auto;
-      width: 90%;
-      max-width: 500px;
-    }
-
-    /* Modal */
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      justify-content: center;
-      align-items: center;
-    }
-
-    .modal-content {
-      background: white;
-      padding: 20px;
-      border-radius: 8px;
-      text-align: center;
-    }
-
-    .close {
-      float: right;
-      cursor: pointer;
-      font-size: 1.5em;
-    }
-  </style>
 </head>
 
 <body>
   <header>
     <span class="site-title">Hacienda Heights Chamber of Commerce</span>
-    <div class="menu-toggle">Menu</div>
-    <nav>
+    <div class="mobile-menu">Menu</div>
+    <nav class="desktop">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="directory.html">Directory</a></li>
+        <li><a href="join.html" class="active">Join</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <nav class="mobile">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="directory.html">Directory</a></li>
@@ -165,11 +109,15 @@
     document.getElementById("lastModified").textContent = document.lastModified;
 
     // Mobile Menu Toggle
-    const menuToggle = document.querySelector('.menu-toggle');
-    const navUl = document.querySelector('nav ul');
+    const menuToggle = document.querySelector('.mobile-menu');
+    const mobileNav = document.querySelector('nav.mobile');
 
     menuToggle.addEventListener('click', () => {
-      navUl.style.display = (navUl.style.display === 'flex') ? 'none' : 'flex';
+      if (mobileNav.style.display === 'flex') {
+        mobileNav.style.display = 'none';
+      } else {
+        mobileNav.style.display = 'flex';
+      }
     });
 
     // Modal for Membership Info
