--- a/chamber/join.html
+++ b/chamber/join.html
@@ -48,55 +48,111 @@
     </div>
   </section>
 
-  <main>
-    <section class="form-section">
-      <form action="thankyou.html" method="get">
-        <fieldset>
-          <legend>Applicant Information</legend>
-          <label>First Name: <input type="text" name="fname" required autocomplete="given-name" /></label>
-          <label>Last Name: <input type="text" name="lname" required autocomplete="family-name" /></label>
-          <label>Title/Position: <input type="text" name="title" pattern="[a-zA-Z\-\s]{7,}" required autocomplete="organization-title" /></label>
-          <label>Email: <input type="email" name="email" required placeholder="you@example.com" autocomplete="email" /></label>
-          <label>Phone: <input type="tel" name="phone" required autocomplete="tel" /></label>
-        </fieldset>
+<!-- 省略head和header部分，接着你的main部分 -->
 
-        <fieldset>
-          <legend>Business Information</legend>
-          <label>Business/Organization Name: <input type="text" name="organization" required autocomplete="organization" /></label>
+<main>
+  <section class="form-section">
+    <form action="thankyou.html" method="get">
+      <fieldset>
+        <legend>Applicant Information</legend>
+        <label>First Name:
+          <input type="text" name="fname" required autocomplete="given-name" title="First Name" />
+        </label>
+        <label>Last Name:
+          <input type="text" name="lname" required autocomplete="family-name" title="Last Name" />
+        </label>
+        <label>Title/Position:
+          <input type="text" name="title" pattern="[a-zA-Z\\-\\s]{7,}" required autocomplete="organization-title" title="Your Title or Position" />
+        </label>
+        <label>Email:
+          <input type="email" name="email" required placeholder="you@example.com" autocomplete="email" title="Email Address" />
+        </label>
+        <label>Phone:
+          <input type="tel" name="phone" required pattern="\\d{10}" placeholder="1234567890" autocomplete="tel" title="Phone Number" />
+        </label>
+      </fieldset>
 
-          <label>Membership Level:
-            <button type="button" id="membershipInfo">More Info</button>
-          </label>
-          <label><input type="radio" name="membership" value="NP" required /> 🕊️ NP Membership (Non-Profit)</label>
-          <label><input type="radio" name="membership" value="Bronze" /> 🥉 Bronze Membership</label>
-          <label><input type="radio" name="membership" value="Silver" /> 🥈 Silver Membership</label>
-          <label><input type="radio" name="membership" value="Gold" /> 🥇 Gold Membership</label>
+      <fieldset>
+        <legend>Business Information</legend>
+        <label>Business/Organization Name:
+          <input type="text" name="organization" required autocomplete="organization" title="Organization Name" />
+        </label>
+        <label>Membership Level:</label>
+        <label><input type="radio" name="membership" value="NP" required /> 🕊️ NP Membership (Non-Profit)</label>
+        <label><input type="radio" name="membership" value="Bronze" /> 🥉 Bronze Membership</label>
+        <label><input type="radio" name="membership" value="Silver" /> 🥈 Silver Membership</label>
+        <label><input type="radio" name="membership" value="Gold" /> 🥇 Gold Membership</label>
 
-          <label>Business Description:
-            <textarea name="description" rows="4" placeholder="Tell us about your business..."></textarea>
-          </label>
-        </fieldset>
+        <label>Business Description:
+          <textarea name="description" rows="4" placeholder="Tell us about your business..." title="Business Description"></textarea>
+        </label>
+      </fieldset>
 
-        <input type="hidden" name="timestamp" id="timestamp" />
-        <div style="text-align: center;">
-          <button type="submit">Join Now</button>
-        </div>
-      </form>
-    </section>
-
-    <!-- Modal -->
-    <div id="modal" class="modal">
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <h2>Membership Levels</h2>
-        <p>NP Membership: For non-profit organizations.</p>
-        <p>Bronze Membership: Basic business support and listing.</p>
-        <p>Silver Membership: Includes Bronze benefits + featured events.</p>
-        <p>Gold Membership: Includes all benefits + premium promotion.</p>
+      <input type="hidden" name="timestamp" id="timestamp" />
+      <div style="text-align: center;">
+        <button type="submit" aria-label="Submit Membership Application">Join Now</button>
       </div>
-    </div>
+    </form>
+  </section>
 
-  </main>
+  <!-- Membership Cards -->
+  <section class="membership-cards">
+    <div class="card" onclick="openModal('modal-np')">
+      <h3>🕊️ NP Membership</h3>
+      <p>Free for Non-Profits</p>
+      <a href="#">More Info</a>
+    </div>
+    <div class="card" onclick="openModal('modal-bronze')">
+      <h3>🥉 Bronze Membership</h3>
+      <p>Basic Listing & Events</p>
+      <a href="#">More Info</a>
+    </div>
+    <div class="card" onclick="openModal('modal-silver')">
+      <h3>🥈 Silver Membership</h3>
+      <p>Featured Events & Benefits</p>
+      <a href="#">More Info</a>
+    </div>
+    <div class="card" onclick="openModal('modal-gold')">
+      <h3>🥇 Gold Membership</h3>
+      <p>All Benefits + Premium</p>
+      <a href="#">More Info</a>
+    </div>
+  </section>
+
+  <!-- Modals -->
+  <div id="modal-np" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal('modal-np')">&times;</span>
+      <h2>NP Membership</h2>
+      <p>For non-profit organizations, free of charge.</p>
+    </div>
+  </div>
+
+  <div id="modal-bronze" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal('modal-bronze')">&times;</span>
+      <h2>Bronze Membership</h2>
+      <p>Basic business support and listing.</p>
+    </div>
+  </div>
+
+  <div id="modal-silver" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal('modal-silver')">&times;</span>
+      <h2>Silver Membership</h2>
+      <p>Includes Bronze benefits plus featured events.</p>
+    </div>
+  </div>
+
+  <div id="modal-gold" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal('modal-gold')">&times;</span>
+      <h2>Gold Membership</h2>
+      <p>All benefits included plus premium promotion.</p>
+    </div>
+  </div>
+
+</main>
 
   <footer>
     <p>&copy; <span id="year"></span> | Zhili Zhong | WDD 231</p>
