--- a/chamber/join.html
+++ b/chamber/join.html
@@ -14,7 +14,7 @@
 
   <title>Join | Hacienda Heights Chamber</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="styles/directory.css" />
+  <link rel="stylesheet" href="styles/join.css" />
 </head>
 
 <body>
