--- a/chamber/join.html
+++ b/chamber/join.html
@@ -41,15 +41,7 @@
   <main>
     <h1>Join the Hacienda Heights Chamber</h1>
 
-    <!-- Hero Section -->
-    <section class="hero">
-      <img src="images/hero.jpg" alt="Business networking event" />
-      <div class="hero-text">
-        <p>Become part of a growing and vibrant local business community.</p>
-      </div>
-    </section>
-
-    <!-- ✅ 新增容器 -->
+    <!-- ✅ Form and Membership Cards 横向排列 -->
     <div class="form-and-cards">
       <section class="form-section">
         <form action="thankyou.html" method="get">
@@ -118,6 +110,14 @@
         </div>
       </section>
     </div>
+
+    <!-- ✅ Hero Section放到最后 -->
+    <section class="hero">
+      <img src="images/hero.jpg" alt="Business networking event" />
+      <div class="hero-text">
+        <p>Become part of a growing and vibrant local business community.</p>
+      </div>
+    </section>
 
     <!-- Modals -->
     <div id="modal-np" class="modal">
