--- a/chamber/join.html
+++ b/chamber/join.html
@@ -38,10 +38,18 @@
     </nav>
   </header>
 
+  <!-- ✅ Hero Section 紧跟导航栏 -->
+  <section class="hero">
+    <img src="images/hero.jpg" alt="Business networking event" />
+    <div class="hero-text">
+      <p>Become part of a growing and vibrant local business community.</p>
+    </div>
+  </section>
+
   <main>
     <h1>Join the Hacienda Heights Chamber</h1>
 
-    <!-- ✅ Form and Membership Cards 横向排列 -->
+    <!-- Form and Membership Cards 横向排列 -->
     <div class="form-and-cards">
       <section class="form-section">
         <form action="thankyou.html" method="get">
@@ -110,14 +118,6 @@
         </div>
       </section>
     </div>
-
-    <!-- ✅ Hero Section放到最后 -->
-    <section class="hero">
-      <img src="images/hero.jpg" alt="Business networking event" />
-      <div class="hero-text">
-        <p>Become part of a growing and vibrant local business community.</p>
-      </div>
-    </section>
 
     <!-- Modals -->
     <div id="modal-np" class="modal">
