--- a/chamber/join.html
+++ b/chamber/join.html
@@ -68,8 +68,9 @@
               <input type="email" name="email" required placeholder="you@example.com" autocomplete="email" title="Email Address" />
             </label>
             <label>Phone:
-              <input type="tel" name="phone" required pattern="\\d{10}" placeholder="1234567890" autocomplete="tel" title="Phone Number" />
+              <input type="tel" name="phone" required pattern="\d{10}" placeholder="1234567890" autocomplete="tel" title="Phone Number" />
             </label>
+
           </fieldset>
 
           <fieldset>
