--- a/final/attractions.html
+++ b/final/attractions.html
@@ -1,53 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="Explore Yosemite's top attractions." />
-    <meta name="author" content="Your Name"/>
-    <title>Attractions - Yosemite Travel Guide</title>
-    <link rel="stylesheet" href="styles/styles.css"/>
-    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Explore the top Yosemite attractions through the lens of personal experience and breathtaking scenery." />
+  <meta name="author" content="Zhili Zhong" />
+  <title>Attractions - Yosemite Travel Guide</title>
+  <link rel="stylesheet" href="styles/styles.css" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <h1>Yosemite Travel Guide</h1>
+  <header>
+    <div class="logo">
+      <h1>Yosemite Travel Guide</h1>
+    </div>
+    <nav>
+      <button id="menu-toggle" aria-label="Menu">&#9776;</button>
+      <ul id="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="attractions.html" class="active">Attractions</a></li>
+        <li><a href="hiking.html">Hiking Trails</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <h2>Top Yosemite Attractions</h2>
+
+    <section class="card-grid">
+      <article class="card">
+        <img src="images/el-capitan.jpg" alt="Massive granite face of El Capitan under blue sky" loading="lazy">
+        <div class="card-content">
+          <h3>El Capitan</h3>
+          <p>Standing in front of El Capitan is like standing before a giant. This iconic granite monolith rises over 3,000 feet above Yosemite Valley. I remember watching tiny climbers halfway up the wall, and it made me realize how vast nature really is.</p>
+          <p><em>My tip:</em> Visit in the late afternoon—sunlight paints the wall golden, and it's a great time for photos!</p>
         </div>
-        <nav>
-            <button id="menu-toggle" aria-label="Menu">&#9776;</button>
-            <ul id="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="attractions.html">Attractions</a></li>
-                <li><a href="hiking.html">Hiking Trails</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+      </article>
 
-    <main>
-        <h2>Top Yosemite Attractions</h2>
-        <section class="features">
-            <div class="feature">
-                <h3>El Capitan</h3>
-                <p>One of the most famous climbing destinations in the world.</p>
-            </div>
-            <div class="feature">
-                <h3>Half Dome</h3>
-                <p>A challenging hike with breathtaking views of Yosemite Valley.</p>
-            </div>
-            <div class="feature">
-                <h3>Yosemite Falls</h3>
-                <p>One of the tallest waterfalls in North America.</p>
-            </div>
-        </section>
-    </main>
+      <article class="card">
+        <img src="images/half-dome.jpg" alt="Sunset view of Half Dome with warm orange glow" loading="lazy">
+        <div class="card-content">
+          <h3>Half Dome</h3>
+          <p>Half Dome is Yosemite’s most recognizable peak. Though I haven’t hiked to the top (yet!), just seeing it at sunset left a deep impression on me. It’s massive, elegant, and somehow calming.</p>
+          <p><em>My tip:</em> Glacier Point offers one of the best panoramic views of Half Dome—don’t miss it if you drive!</p>
+        </div>
+      </article>
 
-    <footer>
-        <p>© 2025 Yosemite Travel Guide. All rights reserved.</p>
-        <p><a href="attributions.html">Attributions</a> | <a href="YOUR_VIDEO_LINK_HERE" target="_blank">Project Demo Video</a></p>
-    </footer>
+      <article class="card">
+        <img src="images/yosemite-falls.jpg" alt="Yosemite Falls with rainbow mist in springtime" loading="lazy">
+        <div class="card-content">
+          <h3>Yosemite Falls</h3>
+          <p>There’s something magical about hearing water thunder from hundreds of feet above. Yosemite Falls is powerful in the spring and peaceful in late summer. The mist even forms little rainbows if you’re lucky!</p>
+          <p><em>My tip:</em> The Lower Falls trail is short and flat—perfect for families or anyone wanting a closer look without a big hike.</p>
+        </div>
+      </article>
+    </section>
+  </main>
 
-    <script type="module" src="scripts/main.js"></script>
+  <footer>
+    <p>© 2025 Yosemite Travel Guide. All rights reserved.</p>
+    <p>
+      <a href="attributions.html">Attributions</a> |
+      <a href="https://www.youtube.com/watch?v=your-demo-video" target="_blank">Project Demo Video</a>
+    </p>
+  </footer>
+
+  <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
