--- a/final/index.html
+++ b/final/index.html
@@ -50,20 +50,29 @@
             </div>
         </section>
 
-        <section class="features">
-            <div class="feature">
-                <h3>Attractions</h3>
-                <p>Discover breathtaking landmarks like El Capitan, Half Dome, and Yosemite Falls.</p>
-            </div>
-            <div class="feature">
-                <h3>Hiking Trails</h3>
-                <p>Find hiking routes for all skill levels, from relaxing strolls to challenging climbs.</p>
-            </div>
-            <div class="feature">
-                <h3>Lodging & Camping</h3>
-                <p>Plan your stay inside or near the park, including campsites and lodges.</p>
-            </div>
-        </section>
+  <section class="card-grid">
+  <a href="attractions.html" class="card" style="text-decoration: none;">
+    <div class="card-content">
+      <h3>Attractions</h3>
+      <p>Discover breathtaking landmarks like El Capitan, Half Dome, and Yosemite Falls.</p>
+    </div>
+  </a>
+
+  <a href="hiking.html" class="card" style="text-decoration: none;">
+    <div class="card-content">
+      <h3>Hiking Trails</h3>
+      <p>Find hiking routes for all skill levels, from relaxing strolls to challenging climbs.</p>
+    </div>
+  </a>
+
+  <a href="contact.html" class="card" style="text-decoration: none;">
+    <div class="card-content">
+      <h3>Lodging & Camping</h3>
+      <p>Plan your stay inside or near the park, including campsites and lodges.</p>
+    </div>
+  </a>
+</section>
+
 
         <section class="announcements">
             <h3>Seasonal Tips</h3>
