--- a/final/contact.html
+++ b/final/contact.html
@@ -1,1 +1,99 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Contact the Yosemite Travel Guide team for questions, suggestions, or bookings." />
+  <meta name="author" content="Zhili Zhong" />
+  <title>Contact Us - Yosemite Travel Guide</title>
+  <link rel="stylesheet" href="styles/styles.css" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+</head>
+<body>
+  <header>
+    <div class="logo">
+      <h1>Yosemite Travel Guide</h1>
+    </div>
+    <nav>
+      <button id="menu-toggle" aria-label="Menu">&#9776;</button>
+      <ul id="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="attractions.html">Attractions</a></li>
+        <li><a href="hiking.html">Hiking Trails</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <h2>Contact Us</h2>
+    <section class="card">
+      <div class="card-content">
+        <p>If you have any questions about Yosemite, want to suggest a new trail, or just say hello — feel free to reach out! I’d love to hear from you.</p>
+
+        <form onsubmit="return handleSubmit(event)" class="contact-form">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required />
+
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required />
+
+          <label for="subject">Subject:</label>
+          <input type="text" id="subject" name="subject" />
+
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" rows="6" required></textarea>
+
+          <button type="submit" class="cta-button">Send Message</button>
+          <p id="form-message" style="color: green; display: none; margin-top: 1rem;">
+            Thank you for your message! We'll get back to you soon.
+          </p>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Yosemite Travel Guide. All rights reserved.</p>
+    <p>
+      <a href="attributions.html">Attributions</a> |
+      <a href="https://www.youtube.com/watch?v=your-demo-video" target="_blank">Project Demo Video</a>
+    </p>
+  </footer>
+
+  <script type="module" src="scripts/main.js"></script>
+
+  <script>
+    function handleSubmit(event) {
+      event.preventDefault();
+
+      const name = document.getElementById("name");
+      const email = document.getElementById("email");
+      const subject = document.getElementById("subject");
+      const message = document.getElementById("message");
+      const formMessage = document.getElementById("form-message");
+
+      if (!name.value.trim() || !email.value.trim() || !message.value.trim()) {
+        alert("Please fill in all required fields.");
+        return false;
+      }
+
+      const emailPattern = /^[^\\s@]+@[^\\s@]+\\.[^\\s@]+$/;
+      if (!emailPattern.test(email.value)) {
+        alert("Please enter a valid email address.");
+        return false;
+      }
+
+      formMessage.style.display = "block";
+
+      name.value = "";
+      email.value = "";
+      subject.value = "";
+      message.value = "";
+
+      return false;
+    }
+  </script>
+</body>
+</html>
 
