--- a/final/thankyou.html
+++ b/final/thankyou.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Thank You</title>
+  <link rel="stylesheet" href="styles/styles.css" />
+  <style>
+    .thank-you {
+      max-width: 600px;
+      margin: 5rem auto;
+      padding: 2rem;
+      text-align: center;
+      background-color: #f0fff4;
+      border: 1px solid #cce5cc;
+      border-radius: 12px;
+      color: #2e8b57;
+    }
+    .thank-you h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+    .thank-you a {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.6rem 1.2rem;
+      background-color: #2e8b57;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+    }
+    .thank-you a:hover {
+      background-color: #228b22;
+    }
+  </style>
+</head>
+<body>
+  <div class="thank-you">
+    <h2>Thank You!</h2>
+    <p>Your message has been sent. We’ll get back to you shortly.</p>
+    <a href="index.html">Return to Home</a>
+  </div>
+</body>
+</html>
 
